<resources>
    <string name="app_name">Vote</string>
    <string name="title_home">Vote</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_voting">Voting</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="invalid_password">Password can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="registerButton">Register</string>
    <string name="button_log_out">Log out</string>
    <string name="label_email">Email</string>
    <string name="label_groups">Groups</string>
</resources>
